--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-.hero-bg{
-  background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.1)), url('./assets/hero.png');
+.hero-bg {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.1)),
+    url('./assets/hero.png');
 }
